@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-01T08:15:30Z",
-  "count_outdated" : 369,
-  "uniques_outdated" : 199,
-  "count" : 391,
-  "uniques" : 213,
+  "timestamp" : "2022-07-01T16:17:07Z",
+  "count_outdated" : 370,
+  "uniques_outdated" : 200,
+  "count" : 393,
+  "uniques" : 214,
   "clones" : [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 2,
@@ -98,10 +91,10 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
