@@ -1,3 +1,10 @@
+2022-07-01T16:17:07Z:
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 199 369 / 213 391
+* notice: next accum: outdated-unq outdated-all / unq all: 200 370 / 214 393
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2022-06-17] / [2022-07-01]
+
 2022-07-01T08:15:30Z:
 * notice: last 14d: unq all: 1 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 199 369 / 212 390
